--- a/src/frontend/templates/layout.html
+++ b/src/frontend/templates/layout.html
@@ -18,6 +18,15 @@
       <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css"
         rel="stylesheet" type="text/css" />
 
+
+        <script src="{{ url_for('static', filename='js/leaflet.extra-markers.min.js')}}"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet.extra-markers.min.css') }}">
+
+
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+
+
+
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
