--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -133,8 +133,10 @@
 
 </script>
 
-
-    {{ foodbanks|safe }}
-
+</div>
+<div class="container">
+    <table>
+      {{ foodbanks|safe }}
+    </table>
 </div>
 {% endblock %}
