wip:  Adding session logic

--- a/src/frontend/templates/layout.html
+++ b/src/frontend/templates/layout.html
@@ -48,6 +48,9 @@
           {% block results %} {% endblock %}
       </div>
     </div>
+    <div class="footer">
+      <p> Testing, one two three</p>
+    </div>
 
  </body>
 </html>
