--- a/src/frontend/templates/layout.html
+++ b/src/frontend/templates/layout.html
@@ -22,7 +22,7 @@
         <script src="{{ url_for('static', filename='js/leaflet.extra-markers.min.js')}}"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet.extra-markers.min.css') }}">
 
-
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
   </head>
   <body>
