wip: giving up on persistent check-boxes

--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -15,7 +15,7 @@
             <br>
             <input type="radio" name="query_type" value="nearest" checked>  on these specific days:
             </h5>
-                  <input type="checkbox" id="mon" name="mon" checked=>
+                  <input type="checkbox" id="mon" name="mon" checked>
                   <label for="mon">Mon &ensp;</label>
                   <input type="checkbox" id="tue" name="tue" checked>
                   <label for="tue">Tue &ensp;</label>
