--- a/templates/index.html
+++ b/templates/index.html
@@ -97,13 +97,19 @@
 {% block results %}
 <div id="map" style="height: 500px;"></div>
 <script>
-    var map = L.map('map').setView([53.4, -1.4], 11);
+    var map = L.map('map').setView([{{map_centre[0]}}, {{map_centre[1]}}], {{map_zoom}});
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
             '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
         maxZoom: 18,
     }).addTo(map);
 
+    L.marker([{{ marker[0] }}, {{ marker[1] }}],
+        {icon: L.ExtraMarkers.icon({
+            icon: 'fa-number',
+            number: 0,
+            markerColor: 'pink'
+        })}).addTo(map);
 
     var marker;
     map.on('click', function(e) {
