--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %} Sheffield foodbank finder {% endblock %}
 
 {% block search %}
-<body onload="updateValue(100)">
+<body onload="updateValue(30)">
         <div>
             <form name="myForm" onsubmit="search" action="search" method="POST"
             enctype="multipart/form-data">
@@ -75,11 +75,12 @@
             <br>
             <script>
                 function updateValue(val) {
-                    document.getElementById("range_val").value = Math.round(val*val*val/1000)/10;
+                    // document.getElementById("range_val").value = Math.round(val*val*val/1000)/10;
+                    document.getElementById("range_val").value = val;
                 }
             </script>
             <label for="travel_range"><h5>Within feasible travel range:</h5></label>
-            <input type="range" min="0" max="100" value = '100' name="travel_range"
+            <input type="range" min="1" max="30" value = '30' name="travel_range"
               onchange="updateValue(this.value)"/>
 
             <input type="text" id="range_val" name="range_val" readonly size="1">km
