--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
 {% block results %}
 <div id="map" style="height: 500px;"></div>
 <script>
-    var map = L.map('map').setView([{{map_centre[0]}}, {{map_centre[1]}}], {{map_zoom}});
+    var map = L.map('map').setView([{{marker[0]}}, {{marker[1]}}], {{map_zoom}});
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
             '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
