--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
 
 {% block results %}
 <br>
-<div>
+<div class="content">
     <h2>This application</h2>
     <p> Was created on behalf of
         <a href="https://sheffield.cityofsanctuary.org/">City of Sanctuary, Sheffield</a>
