--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
     <div class="buffer">
       <footer>
           <address>
-              <p><b>Run on behalf of City of Sanctuary Sheffield</b>, The Sanctuary, 37-39 Chapel Walk, Sheffield, S1 2PD</p>
+              <p><b>City of Sanctuary Sheffield</b>, The Sanctuary, 37-39 Chapel Walk, Sheffield, S1 2PD</p>
               <p><a class="footerlink" href="mailto:admin@sheffield.cityofsanctuary.org">admin@sheffield.cityofsanctuary.org</a>, <a class="footerlink" href="tel:+441142211845">0114 221 1845</a></p>
           </address>
       </footer>
