Updated contact details

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
 <div>
     <h2>Contact details</h2>
     <ul>
-        <li>Email: <a href="mailto:admin@sheffield.cityofsanctuary.org">admin@sheffield.cityofsanctuary.org</a></li>
+        <li>Email: <a href="mailto:springvolunteer@sheffield.cityofsanctuary.org">springvolunteer@sheffield.cityofsanctuary.org</a></li>
         <li>Phone: <a href="tel:+441142211845">0114 221 1845</a></li>
         <li>Website: <a href="https://sheffield.cityofsanctuary.org/">sheffield.cityofsanctuary.org/</a></li>
         <li>Address: The Sanctuary, 37-39 Chapel Walk, Sheffield, S1 2PD</li>
@@ -21,7 +21,7 @@
 <div class="content">
     <h2>Is something wrong with this website?</h2>
     <p>
-        Please <a href="mailto:admin@sheffield.cityofsanctuary.org">email us</a> describing the error, and we will look in to the issue.  Thank you
+        Please <a href="mailto:springvolunteer@sheffield.cityofsanctuary.org">email us</a> describing the error, and we will look in to the issue.  Thank you
         for helping us keep up and running!
     </p>
     <h2>Do you need help?</h2>
