--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,10 +45,10 @@
         </div>
     </nav>
     <div class="container">
-      <div id="input" style="width: 25%; float:left; min-width:300px">
+      <div id="input">
         {% block search %} {% endblock %}
       </div>
-      <div id="output" style="float:center; min-width: 400px">
+      <div id="output">
           {% block results %} {% endblock %}
       </div>
     </div>
