--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,12 +13,11 @@
         <li>Address: The Sanctuary, 37-39 Chapel Walk, Sheffield, S1 2PD</li>
     </ul>
 </div>
-
 {% endblock %}
 
 {% block results %}
 <br>
-<div class="content">
+<div>
     <h2>Is something wrong with this website?</h2>
     <p>
         Please <a href="mailto:springvolunteer@sheffield.cityofsanctuary.org">email us</a> describing the error, and we will look in to the issue.  Thank you
@@ -26,9 +25,7 @@
     </p>
     <h2>Do you need help?</h2>
     <p>
-        City of Sanctuary Sheffield is an independent charity working in solidarity with people seeking sanctuary in Sheffield.  In 2007,
-        with the support of the City Council, Sheffield became the UK's first City of Sanctuary for asylum-seekers and refugees - a city that
-        takes pride in the welcome it offers to people in need of safety.
+        TESTING City of Sanctuary Sheffield is an independent charity working in solidarity with people seeking sanctuary in Sheffield.  In 2007, with the support of the City Council, Sheffield became the UK's first City of Sanctuary for asylum-seekers and refugees - a city that takes pride in the welcome it offers to people in need of safety.
     </p>
     <p>
         You can find out more about what the Sanctuary does <a href="https://sheffield.cityofsanctuary.org/our-projects/current-opening-times-2022/">here</a>.
@@ -38,5 +35,4 @@
         And of course, feel free to contact us!
     </p>
 </div>
-
 {% endblock %}
