--- a/templates/layout.html
+++ b/templates/layout.html
@@ -58,7 +58,7 @@
               <p><b>City of Sanctuary Sheffield</b>, The Sanctuary, 37-39 Chapel Walk, Sheffield, S1 2PD</p>
               <p><a class="footerlink" href="mailto:springvolunteer@sheffield.cityofsanctuary.org">springvolunteer@sheffield.cityofsanctuary.org</a> |
                  <a class="footerlink" href="tel:+441142211845">0114 221 1845</a> |
-                 <a href="https://sheffield.cityofsanctuary.org/" style="color:white">sheffield.cityofsanctuary.org</a></p>
+                 <a class="footerlink" href="https://sheffield.cityofsanctuary.org/">sheffield.cityofsanctuary.org</a></p>
           </address>
       </footer>
     </div>
